<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GerenciadorCampeonatos</string>
    <string name="action_settings">Settings</string>
    <string name="adicionarCampeonato">"Adicionar um Campeonato:"</string>
    <string name="adicionarRodada">"Adicionar uma Rodada:"</string>
    <string name="rodada">Rodada 1</string>
    <string name="rodadaChild">rodada child</string>
    <string name="groupCamp">Campeonato Nome</string>
    <string name="time1txt">Time 1</string>
    <string name="time2txt">Time 2</string>
    <string name="x">X</string>
    <string name="estadio">Estádio:</string>
    <string name="juiz">Juiz:</string>
    <string name="ok">OK</string>
    <string name="nomeJuiz">nome juiz</string>
    <string name="nomeEstadio">nome estádio</string>
    <string name="titulo">titulo</string>
    <string name="Titulo">Título</string>
    <string name="jogador">Jogador</string>

</resources>