<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+dialog/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/time1txt" />

    <TextView
        android:id="@+dialog/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+dialog/time1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/x" />

    <TextView
        android:id="@+dialog/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+dialog/x"
        android:text="@string/time2txt" />

    <TextView
        android:id="@+dialog/estadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+dialog/time1"
        android:text="@string/estadio" />
    
    <Button
        android:id="@+dialog/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+dialog/juiz"
        android:text="@string/ok" />

    <TextView
        android:id="@+dialog/juiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+dialog/estadio"
        android:text="@string/juiz" />

    <TextView
        android:id="@+dialog/nomeEstadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+dialog/estadio"
        android:layout_alignBottom="@+dialog/estadio"
        android:layout_toRightOf="@+dialog/estadio"
        android:text="@string/nomeEstadio" />

    <TextView
        android:id="@+dialog/nomeJuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+dialog/btnOk"
        android:layout_toRightOf="@+dialog/juiz"
        android:text="@string/nomeJuiz" />

</RelativeLayout>